--- a/app/views/static_pages/microfinance.html.haml
+++ b/app/views/static_pages/microfinance.html.haml
@@ -1,19 +1,14 @@
 - provide(:title, "Home")
-.row
-  / .col-md-2#globe.hidden-sm.hidden-xs
-  /   GPS
-  .col-xs-12.feed
-    %h1 Lists in Microfinance
-    .row
-    - @lists.each do |list|
-      =link_to list_path(list) do
-        .col-xs-4.feed-item
-          %h5
-            =list.title
-          %h6
-            =list.description
-          .paper-count
-            =list.items.count
-            papers
-          .curator
-            By Ethan Barhydt 
+
+.row.navigate
+  .col-xs-12
+    %ul
+      %li= link_to "Microfinance", '#'
+.row.feed
+  .col-xs-3
+    %ul
+      %li= link_to "The technology of microfinance", static_pages_technologyofmicrofinance_path
+      %li=link_to "The impact of microfinance", static_pages_impactofmicrofinance_path
+  .col-xs-9
+    %ul
+      = render @lists
