Precompile assets -- remove blue color of links

--- a/app/views/static_pages/groupreputation.html.haml
+++ b/app/views/static_pages/groupreputation.html.haml
@@ -3,11 +3,11 @@
 .row.navigate
   .col-xs-12
     %ul
-      %li= link_to "Microfinance", static_pages_microfinance_path
+      %li= link_to "Microfinance (8)", static_pages_microfinance_path
       %li >>
-      %li= link_to "Technology of Microfinance", static_pages_technologyofmicrofinance_path
+      %li= link_to "Technology of Microfinance (7)", static_pages_technologyofmicrofinance_path
       %li >>
-      %li= link_to "Group Lending & Reputation", '#'
+      %li= link_to "Group Lending & Reputation (3)", '#'
 .row.feed
   .col-xs-3
   .col-xs-9
