Change header and slogan on homepage

--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -3,8 +3,9 @@
   .col-xs-12 
     %ul
       %li 
-        %h1 Explore the research frontier
-        %h4.gray Discover what we know in development economics 
+        %h2 Development economics at your fingertips
+        %h4.gray.slogan A "scholar-sourced" database of research on the cutting edge 
+
 .search
   %input{autofocus: "true", autocomplete: "off", class: "instantsearch", id: "q", placeholder: "Search any topic in development economics (e.g. microcredit)", type: "text", spellcheck: "false"}
 
