Show id numbers of items when logged in as admin

--- a/app/views/items/_item.html.haml
+++ b/app/views/items/_item.html.haml
@@ -8,3 +8,6 @@
       .item-description.gray
         %span.author="#{item.author}, "
         %span.journal="#{item.journal}"
+        - if current_user.try(:admin?)
+          %br
+          = item.id
