--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -4,10 +4,10 @@
     %ul
       %li 
         %h2 Development economics at your fingertips
-        %h4.gray.slogan A "scholar-sourced" database of research on the cutting edge 
+        %h4.gray.slogan The PhD's handbook to research at the cutting edge
 
 .search
-  %input{autofocus: "true", autocomplete: "off", class: "instantsearch", id: "q", placeholder: "Search any topic in development economics (e.g. microcredit)", type: "text", spellcheck: "false"}
+  %input{autofocus: "true", autocomplete: "off", class: "instantsearch", id: "q", placeholder: "Search your research interest (e.g. school vouchers)", type: "text", spellcheck: "false"}
 
 
 
