--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -712,7 +712,8 @@ input[type=checkbox]
 
 
 .slogan {
-	padding-top: 13px;
+	padding-top: 0px;
+	margin-top: 10px;
 	li {
 		list-style-type: none;
 	}
