--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -3,8 +3,8 @@
   .col-xs-12 
     %ul
       %li 
-        %h2 Development economics at your fingertips
-        %h4.gray.slogan The PhD's handbook to research at the cutting edge
+        %h2 Development Economics GPS
+        %h3.gray.slogan The PhD's handbook to research on the cutting edge
 
 .search
   %input{autofocus: "true", autocomplete: "off", class: "instantsearch", id: "q", placeholder: "Search your research interest (e.g. school vouchers)", type: "text", spellcheck: "false"}
