--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -348,13 +348,29 @@ span#unpublished {
 	}
 }
 
+.people {
+	list-style-type: none;
+}
+
 .about {
-	width: 500px;
-	// horizontal-align: middle;
+	// width: 500px;
+	horizontal-align: middle;
 	margin-left: auto;
 	margin-right: auto;
+	font-size: 1.2em;
+	h3 {
+		horizontal-align: center;
+	}
 	a {
 		color: blue;
+	}
+	ol {
+		margin-top: 20px;
+		margin-bottom: 20px
+	}
+	li {
+		// margin-left: 30px;
+		margin-bottom: 10px;
 	}
 }
 
