--- a/app/views/static_pages/about.html.haml
+++ b/app/views/static_pages/about.html.haml
@@ -1,25 +1,153 @@
 - provide(:title, "About")
 
-.row.heading.text-center
-  .col-xs-12 
-    %ul
-      %li
-        %h1 About
-    %ul.otherpages
-      %li
-        / # %h5= link_to "Community", static_pages_people_path
-      %li
-        / # %h5= link_to "FAQ", '#'
+%div{:class => 'row banner', :style => %(background-image:url(/assets/library.jpg))}
+  .banner-info
+    .container
+      .name
+        %span About Us
 
-.about.pull-center
-  It takes time to build up knowledge in a domain of research. If you’re anything like us, you probably use a hodgepodge of methods to do so: searching databases with various combinations of keywords, paging through devo journals, citation-hopping from the seminal papers listed on course syllabi, or consulting other economists with domain expertise. 
-  %br
-  %br
-  Development Economics GPS (DevEc GPS) boils it down to one click. Find a research question you’re interested in and instantly discover what we know — and what we still need to know — about that question. Every research question in our repository comes with a summary of the state of the research as well as a list of the papers that address it. It's fast, comprehensive, and up-to-date. 
-  %br
-  %br
+.row
+  .col-xs-6
+    .about.pull-center
+      %h3.pull-center What Is Development Economics GPS?
+      Development Economics GPS is the PhD's handbook to research. Here's how it works:
 
-  DevEc GPS is a community of develoment economists
-  / # %span= link_to "community of development economists", static_pages_people_path
+      %ol
+        %li Find a research question you're interested in
+        %li 
+          Instantly see the 
+          %b top papers 
+          in the literature
+        %li 
+          Read a crowdsourced synopsis of the 
+          %b latest developments 
+          and 
+          %b open questions 
+          for future research 
+     
+      With DevEc GPS, you don’t have to spend hours scouring Google Scholar results or citation-hopping through the literature. You don’t have to worry about missing important papers or duplicating research that’s already been done. You can spend your time making a novel contribution to the field. DevEc GPS is fast, comprehensive, and up to date.
 
-  who spend their time at the frontier of the field and want to share their knowledge. If you’d like to join our community, please email info@devecgps.com.
+      %h3 Who curates the research questions?
+      Questions are crowdsourced (“scholar-sourced”, if you will) from a community of researchers. Most curators are PhD students studying development economics, but there are also a couple of professors contributing. If you’d like to help curate, email 
+      =mail_to "info@devecgps.com"
+
+      %h3 Can I trust the information?
+      All of the papers come recommended by curators. It’s just like a colleague recommending a paper, except via the Interwebs. So it mostly depends on 
+      =link_to "how much you trust", '/lists/154'
+      your colleagues! Many of the papers are working papers because that’s where the cutting-edge discussions are taking place. The information will also get better over time as more researchers help scrutinize the entries. 
+
+      %h3 Where can I send feedback?
+      Feedback / ideas / critiques are more than welcome. Just email
+      =mail_to "info@devecgps.com" 
+
+
+  .col-xs-6
+    %ul.people
+      %h3 Curators
+
+      =link_to "https://www.linkedin.com/pub/juan-pablo-chauvin/3/434/704" do
+        %li 
+          / %div{:class => 'bg-img profile-bg-img', :style => %(background-image:url(/assets/Siddharth_George.jpg))}
+
+          %div= image_tag("juan_pablo_chauvin.jpg")
+          / # %span.profile-img= image_tag("Siddharth_George.jpg")
+          %div.name= "Juan Pablo Chauvin "
+          %span.position= "PhD, Economics (Harvard University)"
+
+      =link_to "http://www.iq.harvard.edu/people/siddharth-eapen-george" do
+        %li 
+          / %div{:class => 'bg-img profile-bg-img', :style => %(background-image:url(/assets/Siddharth_George.jpg))}
+
+          %div= image_tag("Siddharth_George.jpg")
+          / # %span.profile-img= image_tag("Siddharth_George.jpg")
+          %div.name= "Siddharth George"
+          %span.position= "PhD, Economics (Harvard University)"
+
+      =link_to "https://www.linkedin.com/in/gauravchiplunkar" do
+        %li 
+          / %div{:class => 'bg-img profile-bg-img', :style => %(background-image:url(/assets/Siddharth_George.jpg))}
+
+          %div= image_tag("Gaurav_Chiplunkar2.jpg")
+          / # %span.profile-img= image_tag("Siddharth_George.jpg")
+          %div.name= "Gaurav Chiplunkar"
+          %span.position= "PhD, Economics (Yale University)"
+
+      =link_to "http://scholar.harvard.edu/abel/home" do
+        %li 
+          / %div{:class => 'bg-img profile-bg-img', :style => %(background-image:url(/assets/Siddharth_George.jpg))}
+
+          %div= image_tag("Martin_Abel.jpg")
+          / # %span.profile-img= image_tag("Siddharth_George.jpg")
+          %div.name= "Martin Abel"
+          %span.position= "PhD, Economics (Harvard University)"
+
+
+      =link_to "http://www.iq.harvard.edu/people/tomoko-harigaya" do
+        %li 
+          / %div{:class => 'bg-img profile-bg-img', :style => %(background-image:url(/assets/Siddharth_George.jpg))}
+
+          %div= image_tag("Tomoko_Harigaya.jpg")
+          / # %span.profile-img= image_tag("Siddharth_George.jpg")
+          %div.name= "Tomoko Harigaya"
+          %span.position= "PhD, Economics (Harvard University)"
+
+      =link_to "https://www.linkedin.com/in/nhagerty" do
+        %li 
+          / %div{:class => 'bg-img profile-bg-img', :style => %(background-image:url(/assets/Siddharth_George.jpg))}
+
+          %div= image_tag("Nick_Hagerty.jpg")
+          / # %span.profile-img= image_tag("Siddharth_George.jpg")
+          %div.name= "Nick Hagerty"
+          %span.position= "PhD, Economics (MIT)"
+
+      =link_to "http://scholar.harvard.edu/emontero/home" do
+        %li 
+          / %div{:class => 'bg-img profile-bg-img', :style => %(background-image:url(/assets/Siddharth_George.jpg))}
+
+          %div= image_tag("Eduardo_Montero.jpg")
+          / # %span.profile-img= image_tag("Siddharth_George.jpg")
+          %div.name= "Eduardo Montero"
+          %span.position= "PhD, Economics (Harvard University)"
+
+      =link_to "http://economics.mit.edu/graduate/gea/directory" do
+        %li 
+          / %div{:class => 'bg-img profile-bg-img', :style => %(background-image:url(/assets/Siddharth_George.jpg))}
+
+          %div= image_tag("Ben_Roth.jpg")
+          / # %span.profile-img= image_tag("Siddharth_George.jpg")
+          %div.name= "Ben Roth"
+          %span.position= "PhD, Economics (MIT)"
+
+      =link_to "http://scholar.harvard.edu/nbau/home" do
+        %li 
+          / %div{:class => 'bg-img profile-bg-img', :style => %(background-image:url(/assets/Siddharth_George.jpg))}
+
+          %div= image_tag("Natalie_Bau.jpg")
+          / # %span.profile-img= image_tag("Siddharth_George.jpg")
+          %div.name= "Natalie Bau"
+          %span.position= "PhD, Economics (Harvard University)"
+
+      =link_to "http://economics.mit.edu/graduate/gea/directory" do
+        %li 
+          / %div{:class => 'bg-img profile-bg-img', :style => %(background-image:url(/assets/Siddharth_George.jpg))}
+
+          %div= image_tag("Donghee_Jo.jpg")
+          / # %span.profile-img= image_tag("Siddharth_George.jpg")
+          %div.name= "Donghee Jo"
+          %span.position= "PhD, Economics (MIT)"
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
