Change library.jpg url

--- a/app/views/static_pages/about.html.haml
+++ b/app/views/static_pages/about.html.haml
@@ -1,6 +1,6 @@
 - provide(:title, "About")
 
-%div{:class => 'row banner', :style => %(background-image:url(/assets/library.jpg))}
+%div{:class => 'row banner', :style => %(background-image:url(/assets/library-d5ccedffb00736fb55440d57db17ea46.jpg))}
   .banner-info
     .container
       .name
