Adjust image positions on home

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -295,10 +295,11 @@ span#unpublished {
 }
 
 .collections, .topics {
-	width: 70%;
-	padding-left: 40px;
+	// width: 70%;
+	padding-left: 8%;
 	// display: inline-block;
 	margin: 0 auto;
+	display: block;
 	text-align: center;
 	li {
 		width: 220px;
@@ -310,6 +311,7 @@ span#unpublished {
 		margin-right: 15px;
 		margin-bottom: 15px;
 		border-radius: 3px;
+		display: inline-block;
 
 		.bg-img {
 			// background: linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4) ), url('microfinance.png');
@@ -681,8 +683,8 @@ input[type=checkbox]
 }
 
 .heading {
-	margin-left: 100px;
-	margin-right: 100px;
+	margin-left: 10px;
+	margin-right: 10px;
 	margin-bottom: 20px;
 	margin-top: 60px;
 	h1 {
