--- a/app/views/static_pages/about.html.haml
+++ b/app/views/static_pages/about.html.haml
@@ -32,8 +32,8 @@
       =mail_to "info@devecgps.com"
 
       %h3 Can I trust the information?
-      All of the papers come recommended by curators. It’s just like a colleague recommending a paper, except via the Interwebs. So it mostly depends on how much you trust your colleagues! (If you don't trust your colleagues, perhaps you 
-      =link_to "grew up in an adverse climate?", '/lists/154'
+      All of the papers come recommended by curators. It’s just like a colleague recommending a paper, except via the Interwebs. So it mostly depends on how much you trust your colleagues! (If you don't trust your colleagues,
+      =link_to "blame your country", '/lists/154'
       ). Many of the papers are working papers because that’s where the cutting-edge discussions are taking place. The information will also get better over time as more researchers help scrutinize the entries. 
 
       %h3 Where can I send feedback?
