Make links a lighter blue

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -470,7 +470,7 @@ span#unpublished {
 	// padding-left: 10px;
 	margin-bottom: 10px;
 	a {
-		color: blue;
+		color: #1b82e6;
 	}
 	font-size: 1.1em;
 	border-bottom: 1px solid gray;
