Modify about page contnet

--- a/app/views/static_pages/about.html.haml
+++ b/app/views/static_pages/about.html.haml
@@ -33,7 +33,7 @@
 
       %h3 Can I trust the information?
       All of the papers come recommended by curators. It’s just like a colleague recommending a paper, except via the Interwebs. So it mostly depends on how much you trust your colleagues! (If you don't trust your colleagues,
-      =link_to "blame your country", '/lists/154'
+      =link_to "your country may be to blame", '/lists/154'
       ). Many of the papers are working papers because that’s where the cutting-edge discussions are taking place. The information will also get better over time as more researchers help scrutinize the entries. 
 
       %h3 Where can I send feedback?
