Add number of research collections to home

--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -30,7 +30,7 @@
   .instructions
     .row.research-collection
       .col-xs-12
-        %h3.gray Research Collections
+        %h3.gray Research Collections (8)
     .collection-div
       %ul.collections.pull-center
         - @collections.each do |collection|
