Change 'state of the research' to 'overview' on list#show

--- a/app/views/lists/show.html.haml
+++ b/app/views/lists/show.html.haml
@@ -37,7 +37,7 @@
         / /     %li= link_to "Relevant Papers", '#papers'
         / /     %li= link_to "Contributors", '#contributors'
       .row.content#overview
-        %h4 State of the Research
+        %h4 Overview
         .col-xs-12.description
           = raw @list.description
           %h4= "Relevant Papers"
