Change 'Related papers' to 'Recommended papers'

--- a/app/views/lists/show.html.haml
+++ b/app/views/lists/show.html.haml
@@ -40,7 +40,7 @@
         %h4 Overview
         .col-xs-12.description
           = raw @list.description
-          %h4= "Relevant Papers"
+          %h4= "Recommended Papers"
         .col-xs-12.list-wrapper#papers
           - if @items != []
             = render @items 
