--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -16,7 +16,7 @@
     %ul
       %li 
         %h2 Development Economics GPS
-        %h3.gray.slogan The PhD's handbook to cutting-edge research
+        %h3.gray.slogan The PhD's guide to the research frontier
 
 .search
   %input{autofocus: "true", autocomplete: "off", class: "instantsearch", id: "q", placeholder: "Search your research interest (e.g. school vouchers)", type: "text", spellcheck: "false"}
