Remove email signups because now there's login ability

--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -1,15 +1,15 @@
 - provide(:title, "Home")
 
-.row.text-center
-  .col-xs-12.signup-form
-    %ul 
-      %li New features are coming. Be the first to know about it.
-      %li
-        = form_for @email_signup, remote: true do |f|
-          = render 'shared/error_messages', object: f.object
-          / %div.field
-          %li= f.text_field :email, placeholder: "What's your email?"
-          %li= f.submit "Get updates!", class: "btn btn-large btn-primary", id: "submit"
+/ .row.text-center
+/   .col-xs-12.signup-form
+/     %ul 
+/       %li New features are coming. Be the first to know about it.
+/       %li
+/         = form_for @email_signup, remote: true do |f|
+/           = render 'shared/error_messages', object: f.object
+/           / %div.field
+/           %li= f.text_field :email, placeholder: "What's your email?"
+/           %li= f.submit "Get updates!", class: "btn btn-large btn-primary", id: "submit"
 
 .row.heading.text-center
   .col-xs-12 
