--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,9 +1,9 @@
 %nav.navbar.gps-nav.navbar-default.navbar-fixed-top
   .container-fluid
     .navbar-header
-      .navbar-brand
+      .navbar-brand 
         =link_to root_path do 
-          Development Economics
+          Development Economics 
           %span#globe GPS
     .text-right.slogan.right-header
       %ul.pull-right
@@ -11,12 +11,14 @@
         / %li 
         /   = "Happy #{Date.today.strftime('%A')}!"
 
-        %li
+        %li.auth-button
           = link_to "How this works", static_pages_about_path
         - if current_user.try(:admin?)
           %li= button_to "Create list", new_list_path, method: 'get'
         - if signed_in?
-          %li= link_to "Sign out", destroy_user_session_path, method: 'delete'
+          %li.auth-button= link_to "Sign out", destroy_user_session_path, method: 'delete'
+        - else
+          %li.auth-button= link_to "Sign In", new_user_session_path
 
 
 
