--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,9 +9,10 @@
     = csrf_meta_tags
     %script{src: "//cdn.jsdelivr.net/algoliasearch/3/algoliasearch.min.js"} 
 
+
     
     %meta{ name: "viewport", content: "width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"}
-    = render 'shared/analytics'
+    = render 'shared/analytics.js'
     = render 'layouts/shim'
   
   %body
