Add mixpanel analytics to a bunch of actions

--- a/app/views/items/_item.html.haml
+++ b/app/views/items/_item.html.haml
@@ -11,3 +11,10 @@
         - if current_user.try(:admin?)
           %br
           = item.id
+
+:javascript
+    $(document).ready( function() {
+      $('.item').click( function() {
+        mixpanel.track("Clicked an article");
+      });
+    });
