--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -15,10 +15,10 @@
           = link_to "How this works", static_pages_about_path
         - if current_user.try(:admin?)
           %li= button_to "Create list", new_list_path, method: 'get'
-        - if signed_in?
-          %li.auth-button= link_to "Sign out", destroy_user_session_path, method: 'delete'
-        - else
-          %li.auth-button= link_to "Sign In", new_user_session_path
+        / - if signed_in?
+        /   %li.auth-button= link_to "Sign out", destroy_user_session_path, method: 'delete'
+        / - else
+        /   %li.auth-button= link_to "Sign In", new_user_session_path
 
 :javascript
     $(document).ready( function() {
