--- a/app/views/lists/_list.html.haml
+++ b/app/views/lists/_list.html.haml
@@ -17,3 +17,9 @@
           - if !list.published?
             = "unpublished"
 
+:javascript
+    $(document).ready( function() {
+      $('.feed-item').click( function() {
+        mixpanel.track("Vistited list from collection");
+      });
+    });
