Have lists recognize raw html

--- a/app/views/items/_item_content.html.haml
+++ b/app/views/items/_item_content.html.haml
@@ -11,7 +11,7 @@
     %span Read Now
 %br
 %h5 Abstract
-%p.abstract= @item.abstract
+%p.abstract= raw @item.abstract
 
 :javascript
     $(document).ready( function() {
