--- a/app/views/lists/show.html.haml
+++ b/app/views/lists/show.html.haml
@@ -13,7 +13,7 @@
         .col-xs-12
           - if @list.sources
             This entry is based on
-            = @list.sources
+            = raw @list.sources
         .col-xs-12.contributors#contributors
           Written by
           - @list.users.each do |user|
