Add padding-right to summary of list

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -644,6 +644,7 @@ span#unpublished {
 		margin-top: 10px;
 		margin-bottom: 0px;
 	}
+	margin-right: 100px;
 }
 
 .italic {
@@ -794,6 +795,9 @@ input[type=checkbox]
 	}
 }
 
+.content {
+	padding-right: 20px;
+}
 
 .slogan {
 	padding-top: 0px;
