Quick change to attribution

--- a/app/views/lists/show.html.haml
+++ b/app/views/lists/show.html.haml
@@ -13,6 +13,7 @@
         .col-xs-12.sources
           %br
           - if @list.sources
+            %b Source:
             This entry is based on
             = raw @list.sources
 
