--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -18,6 +18,18 @@
         / %h3 Development Economics GPS
         %h2 A Crowdsourced Handbook for Development Economics
 
+.row.value-prop
+  .col-xs-4
+    %h3 The cutting-edge research
+    The research frontier, now accessible to you in one click. Use the “search-as-you-type” search bar or navigate the directory below. 
+
+  .col-xs-4
+    %h3 All in one place
+    It’s a growing repository built to cover all subfields in development economics. New questions and topics are added every day.
+  .col-xs-4
+    %h3 From sources you can trust
+    Entries are based on review articles or handbook chapters. When there isn’t a review article out there (or it’s dated, as many are), we call in the experts — late-stage PhD students, postdocs, faculty. 
+
 .search
   %input{autofocus: "true", autocomplete: "off", class: "instantsearch", id: "q", placeholder: "Search your research interest (e.g. school vouchers)", type: "text", spellcheck: "false"}
 
