Change 'cutting-edge' to 'frontier'

--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -20,7 +20,7 @@
 
 .row.value-prop
   .col-xs-4
-    %h3 The cutting-edge research
+    %h3 The frontier research
     The research frontier, now accessible to you in one click. Use the “search-as-you-type” search bar or navigate the directory below. 
 
   .col-xs-4
