Fix spelling error

--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -25,7 +25,7 @@
 
   .col-xs-4
     %h3 All in one place
-    It’s a growigng repository built to cover all subfields in development economics. New questions and topics are added every day.
+    It’s a growing repository built to cover all subfields in development economics. New questions and topics are added every day.
   .col-xs-4
     %h3 From sources you trust
     Entries are based on review articles or handbook chapters. When there isn’t a review article out there (or it’s dated, as many are), we call in the experts — late-stage PhD students, postdocs, faculty. 
