Change 'curators' to 'written by'

--- a/app/views/lists/show.html.haml
+++ b/app/views/lists/show.html.haml
@@ -43,7 +43,7 @@
           - else
             = "We do not know of any papers that address '#{@list.title}.' If you know of some, please email us at"
             = mail_to "info@researchgps.com"
-          %h4 Curators
+          %h4 Written By
         .col-xs-12.contributors#contributors
           %br
           - @list.users.each do |user|
