--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,21 +18,21 @@
   %body
     / -flash.each do |key,value|
     /   = content_tag(:div, value, class: "alert alert-#{key}")
-    
-    = render 'layouts/header'
-    / # = debug(params) if Rails.env.development?
-    #wrapper
-      / # = render 'layouts/sidenav'
-      #page-content-wrapper
-        .container
-          - flash.each do |key, value|
-            = content_tag(:div, value.to_s, class: "alert alert-#{key}")
+    #wrapper  
+      = render 'layouts/header'
+      / # = debug(params) if Rails.env.development?
+
+      / - flash.each do |key, value|
+      /   = content_tag(:div, value.to_s, class: "alert alert-#{key}")
+      #page-wrapper
+        .container-fluid
           = yield
-        %footer.footer
-          %small
-            Want to get in touch? Email
-            =mail_to "info@researchgps.com"
-        = debug(params) if Rails.env.development?
+    
+    %footer.footer
+      %small
+        Want to get in touch? Email
+        =mail_to "info@researchgps.com"
+    = debug(params) if Rails.env.development?
   / .footer 
   /   .container-fluid
   /     .pull-right
