--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -1,64 +1,75 @@
 - provide(:title, "Home")
 
-/ .row.text-center
-/   .col-xs-12.signup-form
-/     %ul 
-/       %li New features are coming. Be the first to know about it.
-/       %li
-/         = form_for @email_signup, remote: true do |f|
-/           = render 'shared/error_messages', object: f.object
-/           / %div.field
-/           %li= f.text_field :email, placeholder: "What's your email?"
-/           %li= f.submit "Get updates!", class: "btn btn-large btn-primary", id: "submit"
-
-.row.heading.text-center
-  .col-xs-12 
-    %ul
-      %li 
-        / %h3 Development Economics GPS
-        %h2 A Crowdsourced Handbook for Development Economics
-
-.row.value-prop
-  .col-xs-4
-    %h3 The frontier research
-    The research frontier, now accessible to you in one click. Use the “search-as-you-type” search bar or navigate the directory below. 
-
-  .col-xs-4
-    %h3 All in one place
-    It’s a growing repository built to cover all subfields in development economics. New questions and topics are added every day.
-  .col-xs-4
-    %h3 From sources you trust
-    Entries are based on review articles or handbook chapters. When there isn’t a review article out there (or it’s dated, as many are), we call in the experts — late-stage PhD students, postdocs, faculty. 
-
-.search
-  %input{autofocus: "true", autocomplete: "off", class: "instantsearch", id: "q", placeholder: "Search your research interest (e.g. school vouchers)", type: "text", spellcheck: "false"}
+/ %nav.navbar.navbar-inverse.navbar-fixed-top{role:"navigation"}
+/ .collapse.navbar-collapse.navbar-ex1-collapse
+/   %ul.nav.navbar-nav.side-nav
+/     - Collection.roots.each do |collection|
+/       %li= link_to collection.name, collection
 
 
-#display
-  #hits
-  :javascript
-    var $inputfield = $('#q');
-    var $hits = $('#hits');
-  .instructions
-    .row.research-collection
-      .col-xs-12
-        %h3.gray Research Collections (8)
-    .collection-div
-      %ul.collections.pull-center
-        - @collections.each do |collection|
-          %li
-            %div{:class => 'bg-img', :style => %(background-image:url(/assets/#{collection.image_url}))}
+.row
+  / .col-xs-12
+  %ul.breadcrumb
+    %li Home
+  / .row.text-center
+  /   .col-xs-12.signup-form
+  /     %ul 
+  /       %li New features are coming. Be the first to know about it.
+  /       %li
+  /         = form_for @email_signup, remote: true do |f|
+  /           = render 'shared/error_messages', object: f.object
+  /           / %div.field
+  /           %li= f.text_field :email, placeholder: "What's your email?"
+  /           %li= f.submit "Get updates!", class: "btn btn-large btn-primary", id: "submit"
 
-            / style: "background-image: url(_#{image_path image_url}_)"}
-            =link_to collection_path(collection), class: "collection" do
-              %span= collection.name
-              %span.question-count= "#{pluralize(collection.lists.count, 'research question')}"
+  / .row
+  /   .col-xs-12 
+  /     %ul
+  /       %li 
+  /         / %h3 Development Economics GPS
+  /         %h2 A Crowdsourced Handbook for Development Economics
 
-  :javascript
-    var $instructions = $('.instructions')
+  / .row.value-prop
+  /   .col-xs-4
+  /     %h3 The frontier research
+  /     The research frontier, now accessible to you in one click. Use the “search-as-you-type” search bar or navigate the directory below. 
 
-    $(document).ready( function() {
-      $('.collection').click( function() {
-        mixpanel.track("Visited a collection");
-      });
+  /   .col-xs-4
+  /     %h3 All in one place
+  /     It’s a growing repository built to cover all subfields in development economics. New questions and topics are added every day.
+  /   .col-xs-4
+  /     %h3 From sources you trust
+  /     Entries are based on review articles or handbook chapters. When there isn’t a review article out there (or it’s dated, as many are), we call in the experts — late-stage PhD students, postdocs, faculty. 
+
+  / .search
+  /   %input{autofocus: "true", autocomplete: "off", class: "instantsearch", id: "q", placeholder: "Search your research interest (e.g. school vouchers)", type: "text", spellcheck: "false"}
+
+  .search
+    #display
+      #hits
+      :javascript
+        var $inputfield = $('#q');
+        var $hits = $('#hits');
+      / .instructions
+      /   .row.research-collection
+      /     .col-xs-12
+      /       %h3.gray Research Collections (8)
+      /   .collection-div
+      /     %ul.collections.pull-center
+      /       - @collections.each do |collection|
+      /         %li
+      /           %div{:class => 'bg-img', :style => %(background-image:url(/assets/#{collection.image_url}))}
+
+      /           / style: "background-image: url(_#{image_path image_url}_)"}
+      /           =link_to collection_path(collection), class: "collection" do
+      /             %span= collection.name
+      /             %span.question-count= "#{pluralize(collection.lists.count, 'research question')}"
+
+:javascript
+  var $instructions = $('.instructions')
+
+  $(document).ready( function() {
+    $('.collection').click( function() {
+      mixpanel.track("Visited a collection");
     });
+  });
