--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -36,16 +36,18 @@
       /       Log Out
   .collapse.navbar-collapse.navbar-ex1-collapse
     %ul.nav.navbar-nav.side-nav
-      - if @collection
-        - if @collection.parent
-          %li= link_to "Back to #{@collection.parent.name}", @collection.parent
-        - else
-          %li= link_to "Back to Home", root_url
-        - @collection.children.each do |sibling|
-          %li= link_to sibling.name, sibling
-      -else
-        - Collection.roots.each do |collection|
-          %li= link_to collection.name, collection
+      - Collection.roots.each do |collection|
+        %li= link_to collection.name, collection
+      / - if @collection
+      /   - if @collection.parent
+      /     %li= link_to "Back to #{@collection.parent.name}", @collection.parent
+      /   - else
+      /     %li= link_to "Back to Home", root_url
+      /   - @collection.children.each do |sibling|
+      /     %li= link_to sibling.name, sibling
+      / -else
+      /   - Collection.roots.each do |collection|
+      /     %li= link_to collection.name, collection
 
 
 / %nav.navbar.gps-nav.navbar-default.navbar-fixed-top
