--- a/app/views/lists/_list.html.haml
+++ b/app/views/lists/_list.html.haml
@@ -1,4 +1,4 @@
-= link_to list_path(list) do
+= link_to list_path(list, :collection => @collection) do
   %li.feed-item
     .row
       .col-xs-8.basic-info
