--- a/app/views/collections/show.html.haml
+++ b/app/views/collections/show.html.haml
@@ -8,16 +8,23 @@
 /     %ul
 /       =render @collection.lists
 
-.row
-  %ul.breadcrumb
-    %li= link_to "Home", root_url
-    - @collection.ancestors.each do |ancestor|
-      %li
-        = link_to ancestor.name, ancestor
-        = "(#{ancestor.lists.count})"
-    %li
-      %b#current-collection
-        = link_to @collection.name, @collection
-        = "(#{@collection.lists.count})"
+/ .row.child-collections
+/   %ul
+/     %li.child= link_to "All", @collection.root, class: ("highlight" if @collection == @collection.root)
+/     -@collection.root.children.each do |child|
+/       %li.child= link_to child.name, child, class: ("highlight" if @collection == child)
+/ %li= link_to "Home", root_urlk
+/ - @collection.ancestors.each do |ancestor|
+/   %li
+/     = link_to ancestor.name, ancestor
+/     = "(#{ancestor.lists.count})"
+/ %li
+/   %b#current-collection
+/     = link_to @collection.name, @collection
+/     = "(#{@collection.lists.count})"
 
-  .search=render @collection.lists
+.row
+  .search
+    =render @collection.lists
+    - @collection.children.each do |child|
+      =render child.lists
