--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -36,20 +36,21 @@
       /       Log Out
   .collapse.navbar-collapse.navbar-ex1-collapse
     %ul.nav.navbar-nav.side-nav
+      %li= link_to "Home", root_url
       - Collection.roots.each do |collection|
         %li= link_to collection.name, collection
-      / - if @collection
-      /   - if @collection.parent
-      /     %li= link_to "Back to #{@collection.parent.name}", @collection.parent
-      /   - else
-      /     %li= link_to "Back to Home", root_url
-      /   - @collection.children.each do |sibling|
-      /     %li= link_to sibling.name, sibling
-      / -else
-      /   - Collection.roots.each do |collection|
-      /     %li= link_to collection.name, collection
 
 
+.container-fluid
+  .row.child-collections
+    %ul
+      -if @collection
+        %li.child= link_to "All", @collection.root, class: ("highlight" if @collection == @collection.root)
+        -@collection.root.children.each do |child|
+          %li.child= link_to child.name, child, class: ("highlight" if @collection == child)
+      -else
+        %li.child= link_to "Home", '#', class: "highlight"
+        %li.child= link_to "About", static_pages_about_url
 / %nav.navbar.gps-nav.navbar-default.navbar-fixed-top
 /   .container-fluid
 /     .navbar-header
