Add ability to create new collections as admin

--- a/app/views/collections/show.html.haml
+++ b/app/views/collections/show.html.haml
@@ -25,7 +25,7 @@
 
 .row
   .search
-    =render :partial => "lists/list", :collection => @lists, :as => :list
+    =render :partial => "lists/list", :collection => @lists
     / =render @collection.lists
     / - @collection.children.each do |child|
     /   =render child.lists
