Revert to imperfect but non-error solution to showing 'All' lists on a topic

--- a/app/views/collections/show.html.haml
+++ b/app/views/collections/show.html.haml
@@ -25,7 +25,6 @@
 
 .row
   .search
-    =render :partial => "lists/list", :collection => @lists
-    / =render @collection.lists
-    / - @collection.children.each do |child|
-    /   =render child.lists
+    =render @collection.lists
+    - @collection.children.each do |child|
+      =render child.lists
